# click_book

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  click_book.db  config.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
app/: dependencies.py  main.py
app/auth/: hashing.py  router.py  service.py
app/core/: config.py  database.py
app/logging/: logger.py  middleware.py
app/models/: __init__.py  appointment.py  base_model.py  models.py  role.py  service.py  staff_profile.py  time_off.py  user.py  working_hour.py
app/schema/: api_response.py  role.py  user.py
