[tool.poetry]
name = "click-book"
version = "0.1.0"
description = ""
authors = ["mukhtar-ahmed <kh.mukhtar60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
